fixed height issue

--- a/style/_tablet.scss
+++ b/style/_tablet.scss
@@ -8,11 +8,11 @@
     .container1 {
         border-top-left-radius: 10px;
         border-top-right-radius: 10px;
-        height: 20vh;
+        height: 12.5rem;
     }
 
     .container2 {
-        height: 40vh;
+        height: 21rem;
         border-bottom-left-radius: 10px;
         border-bottom-right-radius: 10px;
     }
