--- a/style/style.scss
+++ b/style/style.scss
@@ -19,7 +19,7 @@
 
 .container2 {
     padding: 1rem 0;
-    height: 40vh;
+    height: 20rem;
     background-color: #fff;
     display: flex;
     flex-direction: column;
@@ -67,6 +67,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        text-align: center;
         gap: .5rem;
         padding: .5rem 0;
     }
