--- a/style/style.css
+++ b/style/style.css
@@ -43,7 +43,7 @@ img {
   gap: 1rem;
 }
 .container2 .description {
-  color: grey;
+  color: #595959;
   font-size: 12px;
   width: 20rem;
   text-align: center;
@@ -69,7 +69,7 @@ img {
   margin: auto;
 }
 .container2 .spam {
-  color: rgb(175, 174, 174);
+  color: #595959;
   font-size: 12px;
   width: 20rem;
 }
@@ -92,11 +92,11 @@ img {
   font-size: 14px;
 }
 .container2 .title {
-  color: gray;
+  color: #595959;
   font-size: 14px;
 }
 .container2 .quote {
-  color: grey;
+  color: #595959;
   text-align: center;
   font-size: 12px;
   width: 20rem;
