--- a/style/style.scss
+++ b/style/style.scss
@@ -12,7 +12,7 @@
     justify-content: center;
     h1 {
         color: #fff;
-        font-size: 24px;
+        font-size: 1.5rem;
         width: 16rem;
     }
 }
@@ -29,7 +29,7 @@
 
     .description {
         color: #595959;
-        font-size: 12px;
+        font-size: 1.25rem;
         width: 20rem;
         text-align: center;
     }
@@ -59,7 +59,7 @@
 
     .spam {
         color: #595959;
-        font-size: 12px;
+        font-size: .75rem;
         width: 20rem;
     }
 
@@ -81,18 +81,18 @@
 
     .name {
         font-weight: 700;
-        font-size: 14px;
+        font-size: .875rem;
     }
 
     .title {
         color: #595959;
-        font-size: 14px;
+        font-size: .875rem;
     }
 
     .quote {
         color: #595959;
         text-align: center;
-        font-size: 12px;
+        font-size: .75rem;
         width: 20rem;
         text-align: center;
     }
